--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/core": "^10.3.1",
+    "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.10.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
